sign up and forgot password route

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -73,6 +73,8 @@
   <script src="src/scripts/services/ngstore.js"></script>
   <script src="src/scripts/services/ui-load.js"></script>
   <script src="src/scripts/controller/logincontroller.js"></script>
+  <script src="src/scripts/controller/forgotpasswordcontroller.js"></script>
+  <script src="src/scripts/controller/signupcontroller.js"></script>
 
 </body>
 </html>
