--- a/public/src/index.html
+++ b/public/src/index.html
@@ -72,9 +72,10 @@
   <script src="src/scripts/filters/fromnow.js"></script>
   <script src="src/scripts/services/ngstore.js"></script>
   <script src="src/scripts/services/ui-load.js"></script>
+  <script src="src/scripts/services/restapicall.js"></script>
+
   <script src="src/scripts/controller/logincontroller.js"></script>
   <script src="src/scripts/controller/forgotpasswordcontroller.js"></script>
   <script src="src/scripts/controller/signupcontroller.js"></script>
-
 </body>
 </html>
