--- a/public/src/index.html
+++ b/public/src/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="src/styles/font.css" type="text/css" />
   <link rel="stylesheet" href="src/styles/app.css" type="text/css" />
   <link rel="stylesheet" href="src/styles/style.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
   <!-- Compiled and minified CSS -->
  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"> -->
@@ -39,11 +40,11 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script> -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-messages.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.3/angular-material.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-messages.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.3/angular-material.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 
 <!-- Compiled and minified JavaScript -->
@@ -95,5 +96,6 @@
   <script src="src/scripts/controller/logincontroller.js"></script>
   <script src="src/scripts/controller/forgotpasswordcontroller.js"></script>
   <script src="src/scripts/controller/signupcontroller.js"></script>
+  <script src="src/scripts/controller/dashcontroller.js"></script>
 </body>
 </html>
