--- a/public/src/index.html
+++ b/public/src/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="bower_components/animate.css/animate.css" type="text/css" />
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" type="text/css" />
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css" type="text/css" />
@@ -19,6 +20,7 @@
   <link rel="stylesheet" href="src/styles/app.css" type="text/css" />
   <link rel="stylesheet" href="src/styles/style.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
   <!-- Compiled and minified CSS -->
  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"> -->
