--- a/public/src/index.html
+++ b/public/src/index.html
@@ -47,6 +47,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-messages.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.3/angular-material.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/SVG-Morpheus/0.3.2/svg-morpheus.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 
 <!-- Compiled and minified JavaScript -->
