--- a/public/src/index.html
+++ b/public/src/index.html
@@ -21,45 +21,32 @@
   <link rel="stylesheet" href="src/styles/style.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
-  <!-- Compiled and minified CSS -->
- <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"> -->
+  <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.min.css">
 
 </head>
 <body ng-app="wrdly">
 
 
-  <div class="app" ui-view ng-controller="AppCtrl"></div>
+ <div class="app" ui-view ng-controller="AppCtrl"></div>
 <!-- jQuery -->
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>-->
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- Angular -->
-<!--  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/angular-aria/angular-aria.js"></script> -->
-  <!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script> -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-messages.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.3/angular-material.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/SVG-Morpheus/0.3.2/svg-morpheus.js"></script>
-<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+ <script src="bower_components/jquery/dist/jquery.min.js"></script>
+
+ <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-messages.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.3/angular-material.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/SVG-Morpheus/0.3.2/svg-morpheus.js"></script>
+ <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 
 <!-- Compiled and minified JavaScript -->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script> -->
 
-<!--  <script src="bower_components/angular-messages/angular-messages.js"></script> -->
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-touch/angular-touch.js"></script>
-  <!--<script src="bower_components/angular-material/angular-material.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.js"></script>-->
+
   <!-- Vendor -->
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/ngstorage/ngStorage.js"></script>
@@ -77,7 +64,10 @@
   <script src="bower_components/angular-translate-loader-static-files/angular-translate-storage-local/angular-translate-storage-local.js"></script>
   <!-- loading-bar -->
   <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
-  <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
+  <!-- for IE support -->
+<script src="bower_components/es6-promise/es6-promise.auto.min.js"></script>
+<script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
+
 
 <!-- App -->
   <script src="src/scripts/app.js"></script>
@@ -101,5 +91,6 @@
   <script src="src/scripts/controller/forgotpasswordcontroller.js"></script>
   <script src="src/scripts/controller/signupcontroller.js"></script>
   <script src="src/scripts/controller/dashcontroller.js"></script>
+   <script src="src/scripts/controller/swalExtend.js"></script>
 </body>
 </html>
