--- a/public/src/index.html
+++ b/public/src/index.html
@@ -6,76 +6,77 @@
   <meta name="description" content="write,thought,drama,think" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-  <link rel="stylesheet" href="bower_components/animate.css/animate.css" type="text/css" />
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" type="text/css" />
+  <link rel="stylesheet" href="../bower_components/animate.css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css" type="text/css" />
 
-  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" type="text/css" />
-  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" type="text/css" />
+  <link rel="stylesheet" href="../bower_components/angular-loading-bar/build/loading-bar.css" type="text/css" />
+  <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css" type="text/css" />
 
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" />
 
-  <link rel="stylesheet" href="src/styles/material-design-icons.css" type="text/css" />
-  <link rel="stylesheet" href="src/styles/font.css" type="text/css" />
-  <link rel="stylesheet" href="src/styles/app.css" type="text/css" />
+  <link rel="stylesheet" href="styles/material-design-icons.css" type="text/css" />
+  <link rel="stylesheet" href="styles/font.css" type="text/css" />
+  <link rel="stylesheet" href="styles/app.css" type="text/css" />
 </head>
 <body ng-app="wrdly">
+  
   <div class="app" ui-view ng-controller="AppCtrl"></div>
-<!-- jQuery -->
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- Angular -->
-<!--  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/angular-aria/angular-aria.js"></script> -->
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
-  <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-<!--  <script src="bower_components/angular-messages/angular-messages.js"></script> -->
-  <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-  <script src="bower_components/angular-touch/angular-touch.js"></script>
-  <!--<script src="bower_components/angular-material/angular-material.js"></script> -->
-<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.js"></script>
+  
+  <!-- jQuery -->
+  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+  <!-- Angular -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+  <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="../bower_components/angular-resource/angular-resource.js"></script>
+  <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="../bower_components/angular-touch/angular-touch.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.js"></script>
+  
   <!-- Vendor -->
-  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="bower_components/ngstorage/ngStorage.js"></script>
-  <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+  <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="../bower_components/ngstorage/ngStorage.js"></script>
+  <script src="../bower_components/angular-ui-utils/ui-utils.js"></script>
 
   <!-- bootstrap -->
-  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
   <!-- lazyload -->
-  <script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
+  <script src="../bower_components/oclazyload/dist/ocLazyLoad.js"></script>
+  
   <!-- translate -->
-  <script src="bower_components/angular-translate/angular-translate.js"></script>
-  <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
-  <script src="bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
-  <script src="bower_components/angular-translate-loader-static-files/angular-translate-storage-local/angular-translate-storage-local.js"></script>
+  <script src="../bower_components/angular-translate/angular-translate.js"></script>
+  <script src="../bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+  <script src="../bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
+  <script src="../bower_components/angular-translate-loader-static-files/angular-translate-storage-local/angular-translate-storage-local.js"></script>
+  
   <!-- loading-bar -->
-  <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
+  <script src="../bower_components/angular-loading-bar/build/loading-bar.js"></script>
 
-<!-- App -->
-  <script src="src/scripts/app.js"></script>
-  <script src="src/scripts/config.js"></script>
-  <script src="src/scripts/config.lazyload.js"></script>
-  <script src="src/scripts/config.router.js"></script>
-  <script src="src/scripts/app.ctrl.js"></script>
+  <!-- App -->
+  <script src="scripts/app.js"></script>
+  <script src="scripts/config.js"></script>
+  <script src="scripts/config.lazyload.js"></script>
+  <script src="scripts/config.router.js"></script>
+  <script src="scripts/app.ctrl.js"></script>
 
-  <script src="src/scripts/directives/lazyload.js"></script>
-  <script src="src/scripts/directives/ui-jp.js"></script>
-  <script src="src/scripts/directives/ui-nav.js"></script>
-  <script src="src/scripts/directives/ui-fullscreen.js"></script>
-  <script src="src/scripts/directives/ui-scroll.js"></script>
-  <script src="src/scripts/directives/ui-toggle.js"></script>
-  <script src="src/scripts/filters/fromnow.js"></script>
-  <script src="src/scripts/services/ngstore.js"></script>
-  <script src="src/scripts/services/ui-load.js"></script>
-  <script src="src/scripts/services/restapicall.js"></script>
+  <script src="scripts/directives/lazyload.js"></script>
+  <script src="scripts/directives/ui-jp.js"></script>
+  <script src="scripts/directives/ui-nav.js"></script>
+  <script src="scripts/directives/ui-fullscreen.js"></script>
+  <script src="scripts/directives/ui-scroll.js"></script>
+  <script src="scripts/directives/ui-toggle.js"></script>
+  <script src="scripts/filters/fromnow.js"></script>
+  <script src="scripts/services/ngstore.js"></script>
+  <script src="scripts/services/ui-load.js"></script>
+  <script src="scripts/services/restapicall.js"></script>
 
-  <script src="src/scripts/controller/logincontroller.js"></script>
-  <script src="src/scripts/controller/forgotpasswordcontroller.js"></script>
-  <script src="src/scripts/controller/signupcontroller.js"></script>
+  <script src="scripts/controller/logincontroller.js"></script>
+  <script src="scripts/controller/forgotpasswordcontroller.js"></script>
+  <script src="scripts/controller/signupcontroller.js"></script>
 </body>
 </html>
